--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
             <div class="year__error"></div>
           </div>
         </div>
-        <div class="line"></div>
-        <button class="btn__input">
-          <img src="assets/images/icon-arrow.svg" alt="arrow">
-        </button>
+        <div class="button__content">
+          <div class="line"></div>
+          <button class="btn__input">
+            <img src="assets/images/icon-arrow.svg" alt="arrow">
+          </button>
+        </div>
         <div class="calculator-content__out">
           <div class="years__out">
             <div class="years__num">--</div>
@@ -79,6 +81,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Volodimir</a>.
     </div>
-  </div>  
+  </div>
+  <script src="js/main.js"></script>  
 </body>
 </html>
