--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
         </div>
         <div class="calculator-content__out">
           <div class="years__out">
-            <div class="years__num">--</div>
+            <div class="years__num"></div>
             <div class="years__title">
               <p>years</p>
             </div>
           </div>
           <div class="months__out">
-            <div class="months__num">--</div>
+            <div class="months__num"></div>
             <div class="months__title">
               <p>months</p>
             </div>
           </div>
           <div class="days__out">
-            <div class="days__num">--</div>
+            <div class="days__num"></div>
             <div class="days__title">
               <p>days</p>
             </div>
