черновой работающий вариант

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
             <div class="day__title">
               <h2>DAY</h2>
             </div>
-            <input class="day__input" type="text" placeholder="DD">
+            <input id ="day__input" type="text" placeholder="DD">
             <div class="day__error"></div>
           </div>
           <div class="month">
             <div class="month__title">
               <h2>MONTH</h2>
             </div>
-            <input class="month__input" type="text" placeholder="MM">
+            <input  id ="month__input" type="text" placeholder="MM">
             <div class="month__error"></div>
           </div>
           <div class="year">
             <div class="year__title">
               <h2>YEAR</h2>
             </div>
-            <input class="year__input" type="text" placeholder="YYYY">
+            <input  id ="year__input" type="text" placeholder="YYYY">
             <div class="year__error"></div>
           </div>
         </div>
@@ -82,6 +82,7 @@
       Coded by <a href="#">Volodimir</a>.
     </div>
   </div>
+  <!-- <script src="js/main-2.js"></script> -->
   <script src="js/main.js"></script>  
 </body>
 </html>
