--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
         <div class="calculator-content__input">
           <div class="day">
             <div class="day__title">
-              <h2>DAY</h2>
+              <h2 class="h2-day">DAY</h2>
             </div>
             <input id ="day__input" type="text" placeholder="DD">
             <div class="day__error"></div>
           </div>
           <div class="month">
             <div class="month__title">
-              <h2>MONTH</h2>
+              <h2 class="h2-month">MONTH</h2>
             </div>
             <input  id ="month__input" type="text" placeholder="MM">
             <div class="month__error"></div>
           </div>
           <div class="year">
             <div class="year__title">
-              <h2>YEAR</h2>
+              <h2 class="h2-year">YEAR</h2>
             </div>
             <input  id ="year__input" type="text" placeholder="YYYY">
             <div class="year__error"></div>
