--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
       Coded by <a href="#">Volodimir</a>.
     </div>
   </div>
-  <script src="js/main-2.js"></script>
-  <!-- <script src="js/main.js"></script>   -->
+  <script src="js/main.js"></script>  
 </body>
 </html>
